--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">PreviousWeather</string>
     <string name="action_settings">Settings</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <dimen name="recyclerview_item">0dp</dimen>
+    <dimen name="cardview_margin">8dp</dimen>
+
+    <string name="can_not_find_version_name">找不到版本号</string>
 </resources>
